# pining-for-the-data

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: python-ci.yml  terraform-apply.yml  terraform-plan.yml
docs/: api-reference.md  tutorial.md
docs/c4/: architecture.dsl  architecture.html
docs/decisions/: 0001-owner-token-in-ssm-parameter-store.md  0002-private-prefix-tier-separation.md  0003-resource-noun-endpoints-no-files-escape-hatch.md  0004-cloudtrail-data-events-on-data-bucket.md  0005-single-bucket-multi-tier-prefix-isolation.md  0006-canonical-models-outside-lambda-source.md  0007-observability-baseline.md  0008-role-aligned-artifact-key-vocabulary.md  0009-restricted-tier-under-existing-public-provider.md  README.md
docs/plans/: 2026-03-19-mock-provider-api.md
docs/specs/: 2026-03-19-mock-provider-api-design.md
docs/superpowers/plans/: 2026-03-19-mock-provider-api.md  2026-03-20-skillcorner-redistribution.md  2026-03-29-documentation-audit-fixes.md  2026-05-02-private-data-tier.md  2026-05-07-audit-remediation.md  2026-05-07-ci-cd-hardening.md  2026-05-07-query-parameter-filtering.md  2026-05-29-idsse-bundesliga-redistribution.md  2026-06-29-skillcorner-restricted-realmadrid-owner-tier.md
docs/superpowers/specs/: 2026-05-02-private-data-tier.md  2026-05-07-ci-cd-hardening.md  2026-05-07-query-parameter-filtering.md  2026-05-29-idsse-bundesliga-redistribution-design.md  2026-06-29-skillcorner-restricted-realmadrid-owner-tier-design.md
name_pools/: cities.json  female_names.json  last_names.json  male_names.json
schemas/: matches.schema.json  players.schema.json
scripts/: backfill_skillcorner_artifacts.py  idsse_figshare_manifest.json  migrate_gradientsports_slug.py  migrate_pff_to_gradient_sports.py  migrate_pff_to_gradientsports.py  regenerate_schemas.py  upload_gradient_wc2022.py  upload_idsse_bundesliga.py  upload_pff_wc2022.py  upload_skillcorner_realmadrid.py  verify_gradient_load.py  verify_idsse_load.py  verify_pff_load.py  verify_skillcorner_realmadrid_load.py
src/canonical/: models.py
src/deidentify/: __init__.py  mapping.py  name_pools.py  roster_generator.py
src/formats/: __init__.py  convert.py  idsse.py  metrica.py  respovision.py  skillcorner.py  skillcorner_bundle.py
src/mock_api/: __init__.py  _cli_common.py  upload.py  upload_players.py
src/publish/: __init__.py  hf_push.py
src/tests/: conftest.py  test_idsse_format.py  test_lambda_handlers.py  test_mapping.py  test_metrica_format.py  test_name_pools.py  test_roster_generator.py  test_schemas.py  test_skillcorner_bundle_format.py  test_skillcorner_format.py  test_upload.py  test_upload_idsse.py  test_upload_players.py  test_upload_skillcorner_realmadrid.py  test_verify_idsse_load.py
src/tests/fixtures/: idsse_matchinformation_synthetic.xml  sample_match.json  sample_tracking.csv  sample_tracking.jsonl  skillcorner_bundle_meta_synthetic.json
terraform/docs/: setup.md
terraform/environments/dev/: .terraform.lock.hcl  backend.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform/modules/api/: main.tf  outputs.tf  variables.tf
terraform/modules/audit/: main.tf  outputs.tf  variables.tf
terraform/modules/functions/: main.tf  outputs.tf  variables.tf
terraform/modules/functions/src/: get_artifact.py  get_player.py  health.py  list_matches.py  list_players.py  list_providers.py  shared.py
terraform/modules/github_oidc/: main.tf  outputs.tf  variables.tf
terraform/modules/observability/: main.tf  outputs.tf  variables.tf
terraform/modules/state/: main.tf  outputs.tf  variables.tf
terraform/modules/storage/: main.tf  outputs.tf
