[project]
name = "pining-for-the-data"
version = "0.1.0"
description = "De-identified youth soccer tracking data — open dataset and mock provider API"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "pandas>=2.2.0",
    "pyarrow>=15.0.0",
]

[project.optional-dependencies]
publish = [
    "huggingface_hub>=0.25.0",
]
aws = [
    "boto3>=1.34.0",
]
dev = [
    "ruff>=0.3.0",
    "pyright>=1.1.350",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pre-commit>=3.6.0",
    "boto3>=1.34.0",
]

[project.scripts]
pining-generate-roster = "deidentify.roster_generator:main"
pining-ingest = "formats.metrica:main"
pining-publish = "publish.hf_push:main"
pining-upload = "mock_api.upload:main"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "S",   # flake8-bandit (security)
    "RUF", # ruff-specific
]

[tool.ruff.lint.per-file-ignores]
"src/tests/**" = ["S101", "S311"]  # assert + pseudo-random OK in tests
"src/deidentify/**" = ["S311"]  # pseudo-random is fine for fake name generation

[tool.ruff.lint.isort]
known-first-party = ["deidentify", "formats", "publish", "mock_api"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
testpaths = ["src/tests"]
addopts = "--tb=short -q"

[tool.hatch.build.targets.wheel]
packages = ["src/deidentify", "src/formats", "src/publish", "src/mock_api"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
